# electripy

./: LICENSE  PHYSICS.md  README.md  requirements.txt  setup.cfg  setup.py
electripy/: __main__.py
electripy/physics/: charge_distribution.py  charge_network.py  charges.py  constants.py  particles.py
electripy/visualization/: colors.py  numbers.py  screen.py  settings.py  simulation.py  string.py
