[metadata]
name = electripy
version = 0.0.1
author = Dylan Tintenfich
author_email = tintenfichdylan05@gmail.com
description = Visualize the electric field of a point charge network
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/dylannalex/electripy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = electripy
packages = find:
python_requires = >=3.6

[options.packages.find]
where = electripy